Renders newest gig data on homepage

--- a/views/main/home.hbs
+++ b/views/main/home.hbs
@@ -66,6 +66,20 @@
 				</h3>
 			</div>
 		</div>
+    {{#each gigs}}
+    <div class="col-md-3">
+			<div class="gig-card">
+        <a href="/service_detail/{{ _id }}"><<img src="/img/copywrite.jpg" /></a>
+				<h4>
+					{{ title }}
+				</h4>
+				<h3>
+					${{ price }}
+				</h3>
+			</div>
+		</div>
+    {{/each}}
+
 
 	</div>
 </div>
